@@ -1,3 +1,6 @@
+2007-04-25  Benoit Gréoire  <bock@step.polymtl.ca>
+        * ShoutBox.php:  The shout form wasn't displayed whent there weren't any Shouts yet, doh!
+
 2007-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
 	* AuthenticatorRadius.php:  Fix RADIUS dependency detection bug related to case sensitivity
 
